0. Metadata
-----------
Copyright:		Copyright (C) 2011 - 2013 Dazzle Software, LLC. All rights reserved.
License:		GNU General Public License version 2 or later; see LICENSE.txt

1. Copyright and disclaimer
---------------------------
This application is opensource software released under the GPL.  Please
see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! Portfolio, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

-------------------- 1.0.0 Alpha Release [13-March-2013] ------------------
+ missing CHANGELOG Credits files for com_portfolio
^ Renamed com_content as com_portfolio
^ copyright change to source code copyrights
^ version bump @since files
^ mod_articles_archive renamed as mod_portfolio_archive
+ added missing language ini files