@@ -1,11 +1,0 @@
-; Joomla! Project
-; Copyright (C) 2005 - 2013 Open Source Matters. All rights reserved.
-; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
-; Note : All ini files need to be saved as UTF-8 - No BOM
-
-MOD_ARTICLES_ARCHIVE="Archived Articles"
-MOD_ARTICLES_ARCHIVE_FIELD_COUNT_LABEL="# of Months"
-MOD_ARTICLES_ARCHIVE_FIELD_COUNT_DESC="The number of months to display (the default is 10)"
-MOD_ARTICLES_ARCHIVE_XML_DESCRIPTION="This module shows a list of the calendar months containing archived articles. After you have changed the status of an article to archived, this list will be automatically generated."
-MOD_ARTICLES_ARCHIVE_DATE="%1$s, %2$s"
-
