@@ -1,9 +1,0 @@
-; Joomla! Project
-; Copyright (C) 2005 - 2013 Open Source Matters. All rights reserved.
-; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
-; Note : All ini files need to be saved as UTF-8 - No BOM
-
-MOD_ARTICLES_ARCHIVE="Archived Articles"
-MOD_ARTICLES_ARCHIVE_XML_DESCRIPTION="This Module shows a list of the calendar months containing Archived Articles. After you have changed the status of an Article to Archived, this list will be automatically generated."
-MOD_ARTICLES_ARCHIVE_LAYOUT_DEFAULT="Default"
-
